<resources>
    <string name="app_name">AssetFlow</string>
    <string name="create_account">Create Account</string>
    <string name="join_assetflow">Join AssetFlow today</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Create Account</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_account">Sign in to your account</string>
    <string name="inventory_management">Inventory Management System</string>
    <string name="or">or</string>
    <string name="google_signin">Continue with Google</string>
    <string name="default_web_client_id">22999592860-r41k8gqk2kgkkl4p8h0k4s978d9qdsen.apps.googleusercontent.com</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>

    <string-array name="transaction_sort_options">
        <item>Newest to Oldest</item>
        <item>Oldest to Newest</item>
    </string-array>
</resources>